fix flexbox height issue for parameter hint on IE and Safari

--- a/src/vs/editor/contrib/parameterHints/browser/parameterHints.css
+++ b/src/vs/editor/contrib/parameterHints/browser/parameterHints.css
@@ -14,7 +14,6 @@
 
 .monaco-editor .parameter-hints-widget > .wrapper {
 	max-width: 440px;
-	height: 100%;
 	display: flex;
 	flex-direction: column;
 }
@@ -56,7 +55,6 @@
 }
 
 .monaco-editor .parameter-hints-widget .docs {
-	height: 100%;
 	padding: 0 10px 0 5px;
 }
 
